--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,14 @@ name = "slime_seed_finder"
 
 [dependencies]
 clap = { version = "2", optional = true }
+stdweb = { version = "0.4", optional = true }
 
 [[bin]]
 name = "slime_seed_finder"
+path = "src/main.rs"
 required-features = ["clap"]
 
+[[bin]]
+name = "wasm_gui"
+path = "src/wasm_gui.rs"
+required-features = ["stdweb"]
