--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,15 @@ authors = ["Badel2 <2badel2@gmail.com>"]
 [lib]
 name = "slime_seed_finder"
 
+[features]
+serde1 = ["serde", "serde_derive", "serde_json"]
+
 [dependencies]
 clap = { version = "2", optional = true }
 stdweb = { version = "0.4", optional = true }
+serde = { version = "1.0", optional = true }
+serde_derive = { version = "1.0", optional = true }
+serde_json = { version = "1.0", optional = true }
 
 [[bin]]
 name = "slime_seed_finder"
@@ -18,4 +24,4 @@ required-features = ["clap"]
 [[bin]]
 name = "wasm_gui"
 path = "src/wasm_gui.rs"
-required-features = ["stdweb"]
+required-features = ["stdweb", "serde1"]
