--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ stdweb = { version = "0.4", optional = true }
 serde = { version = "1.0", optional = true }
 serde_derive = { version = "1.0", optional = true }
 serde_json = { version = "1.0", optional = true }
+ndarray = "0.11.0"
 
 [[bin]]
 name = "slime_seed_finder"
