--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ name = "slime_seed_finder"
 
 [features]
 serde1 = ["serde", "serde_derive", "serde_json"]
+cubiomes_rs = []
 
 [dependencies]
 clap = { version = "2", optional = true }
