--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ name = "slime_seed_finder"
 [features]
 serde1 = ["serde", "serde_derive", "serde_json"]
 cubiomes_rs = []
+wasm = ["serde1", "stdweb", "palette"]
 
 [dependencies]
 clap = { version = "2", optional = true }
@@ -17,6 +18,7 @@ serde = { version = "1.0", optional = true }
 serde_derive = { version = "1.0", optional = true }
 serde_json = { version = "1.0", optional = true }
 ndarray = "0.11.0"
+palette = { version = "0.4", optional = true }
 
 [[bin]]
 name = "slime_seed_finder"
