--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,11 +11,12 @@ lto = true
 
 [features]
 serde1 = ["serde", "serde_derive", "serde_json"]
-cubiomes_rs = []
+cubiomes_rs = ["libc"]
 wasm = ["serde1", "stdweb", "palette"]
 
 [dependencies]
 clap = { version = "2", optional = true }
+libc = { version = "0.2", optional = true }
 stdweb = { version = "0.4", optional = true }
 serde = { version = "1.0", optional = true }
 serde_derive = { version = "1.0", optional = true }
