--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,17 +11,16 @@ name = "slime_seed_finder"
 lto = true
 
 [features]
-serde1 = ["serde", "serde_derive", "serde_json"]
 cubiomes_rs = ["libc"]
-wasm = ["serde1", "stdweb", "palette"]
+wasm = ["stdweb", "palette"]
 
 [dependencies]
 clap = { version = "2", optional = true }
 libc = { version = "0.2", optional = true }
 stdweb = { version = "0.4", optional = true }
-serde = { version = "1.0", optional = true }
-serde_derive = { version = "1.0", optional = true }
-serde_json = { version = "1.0", optional = true }
+serde = { version = "1.0", optional = false }
+serde_derive = { version = "1.0", optional = false }
+serde_json = { version = "1.0", optional = false }
 ndarray = "0.12.1"
 palette = { version = "0.4", optional = true }
 
@@ -33,7 +32,7 @@ required-features = ["clap"]
 [[bin]]
 name = "wasm_gui"
 path = "src/wasm_gui.rs"
-required-features = ["stdweb", "serde1"]
+required-features = ["stdweb"]
 
 [[example]]
 name = "rendermap"
