river_seed_finder native example

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,9 @@ serde_json = { version = "1.0", optional = false }
 ndarray = "0.12.1"
 palette = { version = "0.4", optional = true }
 
+[dev-dependencies]
+pretty_env_logger = "0.3"
+
 [[bin]]
 name = "slime_seed_finder"
 path = "src/main.rs"
