--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,13 +12,14 @@ lto = true
 
 [features]
 cubiomes_rs = ["libc"]
-main = ["structopt", "rand", "image"]
+main = ["structopt", "rand", "image", "num_cpus"]
 wasm = ["stdweb", "palette"]
 
 [dependencies]
 ansi_term = "0.12.0"
 anvil-region = "0.3"
 named-binary-tag = "0.2"
+num_cpus = { version = "1.0", optional = true }
 structopt = { version = "0.2.18", optional = true }
 image = { version = "0.22.1", optional = true }
 libc = { version = "0.2.62", optional = true }
