--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ wasm = ["stdweb", "palette"]
 ansi_term = "0.12.0"
 anvil-region = "0.3"
 named-binary-tag = "0.2"
+spiral = "0.1"
 num_cpus = { version = "1.0", optional = true }
 structopt = { version = "0.2.18", optional = true }
 image = { version = "0.22.1", optional = true }
