--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ ndarray = "0.12.1"
 palette = { version = "0.4.1", optional = true }
 rand = { version = "0.7.0", optional = true }
 pretty_env_logger = "0.3.1"
+sha2 = "0.8"
 
 [[bin]]
 name = "slime_seed_finder"
