--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ main = ["structopt", "rand", "image", "num_cpus"]
 
 [dependencies]
 ansi_term = "0.12.0"
-anvil-region = { git = "https://github.com/Badel2/anvil-region", branch = "generic-fs", features = ["zip"] }
+anvil-region = { git = "https://github.com/Badel2/anvil-region", branch = "zip", features = ["zip"] }
 named-binary-tag = "0.2"
 spiral = "0.1"
 num_cpus = { version = "1.0", optional = true }
