--- a/slime_seed_finder_web/Cargo.toml
+++ b/slime_seed_finder_web/Cargo.toml
@@ -8,9 +8,9 @@ edition = "2018"
 
 [dependencies]
 slime_seed_finder = { "path" = ".." }
-ansi_term = "0.12.0"
+ansi_term = "0.12.1"
 log = { version = "0.4.8", features = ["std"] }
-palette = { version = "0.4.1" }
-serde = { version = "1.0.103", features = ["derive"] }
-serde_json = { version = "1.0.44" }
-stdweb = { version = "0.4.20" }
+palette = "0.5.0"
+serde = { version = "1.0.104", features = ["derive"] }
+serde_json = "1.0.44"
+stdweb = "0.4.20"
