--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,10 @@ name = "slime_seed_finder"
 lto = true
 
 [features]
+base_main = ["structopt", "image", "num_cpus"]
 cubiomes_rs = ["libc"]
-main = ["structopt", "rand", "image", "num_cpus"]
+main = ["base_main", "rand"]
+wasi = ["base_main"]
 
 [dependencies]
 ansi_term = "0.12.1"
@@ -34,7 +36,7 @@ sha2 = "0.8.2"
 [[bin]]
 name = "slime_seed_finder"
 path = "src/main.rs"
-required-features = ["main"]
+required-features = ["base_main"]
 
 [[example]]
 name = "rendermap"
