--- a/slime_seed_finder_web/Cargo.toml
+++ b/slime_seed_finder_web/Cargo.toml
@@ -9,7 +9,9 @@ edition = "2018"
 [dependencies]
 slime_seed_finder = { "path" = ".." }
 ansi_term = "0.12.1"
+image = { version = "0.23", default-features = false }
 log = { version = "0.4.8", features = ["std"] }
+minecraft_screenshot_parser = "0.2.1"
 palette = "0.5.0"
 serde = { version = "1.0.111", features = ["derive"] }
 serde_json = "1.0.53"
