Implement read-dungeons from zip
This command will read a minecraft save and print the locations and the
floor of all the already generated dungeons

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,8 @@ rand = { version = "0.7.3", optional = true }
 pretty_env_logger = "0.4.0"
 sha2 = "0.8.2"
 zip = { version = "0.5.5", default-features = false, features = ["deflate"] }
+fastanvil = "0.11"
+fastnbt = "0.11"
 
 [[bin]]
 name = "slime_seed_finder"
