Use Rust 1.47 to build demo
It looks like 1.48 produces an invalid wasm file

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Install stable toolchain
         uses: actions-rs/toolchain@v1
         with:
-          toolchain: stable
+          toolchain: 1.47.0
           override: true
 
       - name: Build
