--- a/slime_seed_finder_web/Cargo.toml
+++ b/slime_seed_finder_web/Cargo.toml
@@ -15,4 +15,4 @@ minecraft_screenshot_parser = "0.3"
 palette = "0.5.0"
 serde = { version = "1.0.111", features = ["derive"] }
 serde_json = "1.0.53"
-stdweb = "0.4.20"
+stdweb = { git = "https://github.com/Badel2/stdweb", rev = "942dadf9b36df45cb689d52c18753d3d6df4ee9e" }
