--- a/slime_seed_finder_web/Cargo.toml
+++ b/slime_seed_finder_web/Cargo.toml
@@ -11,7 +11,9 @@ slime_seed_finder = { "path" = ".." }
 image = { version = "0.23", default-features = false }
 log = { version = "0.4.8", features = ["std"] }
 minecraft_screenshot_parser = "0.3"
+named-binary-tag = "0.5.0"
 palette = "0.5.0"
 serde = { version = "1.0.111", features = ["derive"] }
 serde_json = "1.0.53"
 stdweb = { git = "https://github.com/Badel2/stdweb", rev = "942dadf9b36df45cb689d52c18753d3d6df4ee9e" }
+zip = { version = "0.5.5", default-features = false }
