Add job to automatically compile and publish AppImages

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -50,3 +50,47 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./static
           force_orphan: true
+
+  publish_electron:
+    # Do not publish if web demo job fails
+    needs: build
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [macos-latest, ubuntu-latest, windows-latest]
+
+    steps:
+      - name: Check out Git repository
+        uses: actions/checkout@v1
+
+      - name: Install stable toolchain
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          override: true
+
+      - name: Install nj-cli
+        run: ./ci/install_nj_cli.sh
+
+      - name: Install Node.js, NPM and Yarn
+        uses: actions/setup-node@v1
+        with:
+          node-version: 14
+
+      - name: Build/release Electron app
+        uses: samuelmeuli/action-electron-builder@v1
+        with:
+          # GitHub token, automatically provided to the action
+          # (No need to define this secret in the repo settings)
+          github_token: ${{ secrets.github_token }}
+
+          # If the commit is tagged with a version (e.g. "v1.0.0"),
+          # release the app after building
+          release: ${{ startsWith(github.ref, 'refs/tags/v') }}
+
+          # cd into this directory before running any commands
+          package_root: "slime_seed_finder_webui"
+
+          # Command to run before running electron-builder:
+          # npm run prepare-dist
+          build_script_name: "prepare-dist"
