--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -33,7 +33,10 @@ jobs:
         run: cargo test --verbose --features="main"
 
       - name: Install nj-cli
-        run: ./ci/install_nj_cli.sh
+        uses: actions-rs/install@v0.1
+        with:
+          crate: nj-cli
+          version: latest
 
       - name: Build node bindings
         run: ./ci/build_node_bindings.sh
@@ -53,7 +56,8 @@ jobs:
 
   publish_electron:
     # Do not publish if web demo job fails
-    needs: build
+    # TODO: commented out for testing
+    #needs: build
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -70,7 +74,10 @@ jobs:
           override: true
 
       - name: Install nj-cli
-        run: ./ci/install_nj_cli.sh
+        uses: actions-rs/install@v0.1
+        with:
+          crate: nj-cli
+          version: latest
 
       - name: Install Node.js, NPM and Yarn
         uses: actions/setup-node@v1
