--- a/slime_seed_finder_webui/package.json
+++ b/slime_seed_finder_webui/package.json
@@ -2,6 +2,10 @@
     "name": "slime_seed_finder_webui",
     "version": "0.1.0",
     "description": "minecraft utility tools",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/Badel2/slime_seed_finder.git"
+    },
     "main": "src/main/index.js",
     "scripts": {
         "start": "electron .",
