Use better release targets for electron app
Primary windows is now a portable .exe instead of a ugly installer

--- a/slime_seed_finder_webui/package.json
+++ b/slime_seed_finder_webui/package.json
@@ -18,9 +18,23 @@
     },
     "build": {
         "appId": "com.github.badel2.slime_seed_finder_webui",
+        "artifactName": "${productName}-${os}.${ext}",
+        "linux": {
+            "target": [
+                "AppImage",
+                "snap",
+                "tar.xz"
+            ]
+        },
         "snap": {
             "publish": [
                 "github"
+            ]
+        },
+        "win": {
+            "target": [
+                "portable",
+                "zip"
             ]
         }
     },
