--- a/slime_seed_finder_web/Cargo.toml
+++ b/slime_seed_finder_web/Cargo.toml
@@ -6,14 +6,18 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+crate-type = ["cdylib"]
+
 [dependencies]
 slime_seed_finder = { "path" = ".." }
 image = { version = "0.23", default-features = false }
 log = { version = "0.4.14", features = ["std"] }
+wasm-logger = "0.2.0"
 minecraft_screenshot_parser = "0.3"
 named-binary-tag = "0.6.0"
 palette = "0.6.0"
 serde = { version = "1.0.126", features = ["derive"] }
 serde_json = "1.0.64"
-stdweb = { git = "https://github.com/Badel2/stdweb", rev = "942dadf9b36df45cb689d52c18753d3d6df4ee9e" }
+wasm-bindgen = { version = "0.2.78", features = ["serde-serialize"] }
 zip = { version = "0.5.13", default-features = false }
