--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -24,7 +24,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Install cargo-web
-      run: ./ci/install_cargo_web.sh
+    - name: Install wasm_bindgen
+      run: ./ci/install_wasm_bindgen.sh
     - name: Build web demo
       run: ./ci/build_demo.sh
