Add some 1.18 support to C bindings
And new draw_map3d_image_to_file function

--- a/slime_seed_finder_c/Cargo.toml
+++ b/slime_seed_finder_c/Cargo.toml
@@ -10,7 +10,12 @@ name = "slime_seed_finder"
 crate-type = ["cdylib"]      # Creates dynamic lib
 # crate-type = ["staticlib"] # Creates static lib
 
+[features]
+# TODO: need to enable all features here to make cbindgen generate bindings
+default = ["image"]
+
 [dependencies]
+image = { version = "0.23.14", optional = true }
 slime_seed_finder = { "path" = ".." }
 
 [build-dependencies]
