--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ sha2 = "0.9.5"
 zip = { version = "0.5.13", default-features = false, features = ["deflate"] }
 fastanvil = "0.22.0"
 fastnbt = "1.2.0"
+lazy_static = "1.4.0"
 
 [[bin]]
 name = "slime_seed_finder"
