--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,6 @@ main = ["base_main", "rand"]
 wasi = ["base_main"]
 
 [dependencies]
-named-binary-tag = "0.6.0"
 spiral = "0.1.9"
 num_cpus = { version = "1.13.0", optional = true }
 structopt = { version = "0.3.22", optional = true }
@@ -37,6 +36,7 @@ fastanvil = { git = "https://github.com/Badel2/fastnbt", rev = "2d8951f0b96338de
 #fastanvil = "0.26"
 fastnbt = "2"
 lazy_static = "1.4.0"
+flate2 = "1.0.24"
 
 [[bin]]
 name = "slime_seed_finder"
