Pin nj-cli version
To try to solve compile error

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -37,7 +37,7 @@ jobs:
         uses: actions-rs/install@v0.1
         with:
           crate: nj-cli
-          version: latest
+          version: 0.4.1
 
       - name: Build node bindings
         run: ./ci/build_node_bindings.sh
