Disable build_node_bindings script from CI
Because it's not working

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -42,9 +42,10 @@ jobs:
         with:
           crate: nj-cli
           version: 0.4.1
-
-      - name: Build node bindings
-        run: ./ci/build_node_bindings.sh
+# TODO: building node bindings in Github actions fails with linker error:
+# undefined reference to `napi_define_properties`
+#      - name: Build node bindings
+#        run: ./ci/build_node_bindings.sh
 
       - name: Install wasm_bindgen
         run: ./ci/install_wasm_bindgen.sh
