--- a/slime_seed_finder_web/Cargo.toml
+++ b/slime_seed_finder_web/Cargo.toml
@@ -20,3 +20,6 @@ serde = { version = "1.0.126", features = ["derive"] }
 serde_json = "1.0.64"
 wasm-bindgen = { version = "0.2.81", features = ["serde-serialize"] }
 zip = { version = "0.5.13", default-features = false }
+
+[patch.crates-io]
+wasm-bindgen = { git = "https://github.com/Badel2/wasm-bindgen" }
