--- a/slime_seed_finder_web/Cargo.toml
+++ b/slime_seed_finder_web/Cargo.toml
@@ -19,6 +19,8 @@ palette = "0.6.0"
 serde = { version = "1.0.126", features = ["derive"] }
 serde_json = "1.0.64"
 wasm-bindgen = { version = "0.2.81", features = ["serde-serialize"] }
+wasm-bindgen-file-reader = "1"
+web-sys = { version = "0.3.57", features = ["Blob", "File", "FileReaderSync"] }
 zip = { version = "0.6.2", default-features = false }
 
 [patch.crates-io]
