Update nj-cli to 0.4.3

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -34,10 +34,7 @@ jobs:
         run: cargo test --verbose --features="main"
 
       - name: Install nj-cli
-        uses: actions-rs/install@v0.1
-        with:
-          crate: nj-cli
-          version: 0.4.1
+        run: ./ci/install_nj_cli.sh
 
       - name: Build node bindings
         run: ./ci/build_node_bindings.sh
