--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,14 +15,14 @@ name = "slime_seed_finder"
 lto = true
 
 [features]
-base_main = ["structopt", "image", "num_cpus"]
+base_main = ["clap", "image", "num_cpus"]
 main = ["base_main", "rand"]
 wasi = ["base_main"]
 
 [dependencies]
 spiral = "0.1.9"
 num_cpus = { version = "1.13.0", optional = true }
-structopt = { version = "0.3.22", optional = true }
+clap = { version = "3.2.17", features = ["derive"], optional = true }
 image = { version = "0.24.1", optional = true }
 log = { version = "0.4.14", features = ["std"] }
 serde = { version = "1.0.126", features = ["derive"] }
