--- a/slime_seed_finder_web/Cargo.toml
+++ b/slime_seed_finder_web/Cargo.toml
@@ -15,7 +15,7 @@ image = { version = "0.24.1", default-features = false }
 log = { version = "0.4.14", features = ["std"] }
 wasm-logger = "0.2.0"
 minecraft_screenshot_parser = "0.4"
-palette = "0.6.0"
+colorgrad = "0.6.2"
 serde = { version = "1.0.126", features = ["derive"] }
 serde_json = "1.0.64"
 wasm-bindgen = { version = "0.2.81", features = ["serde-serialize"] }
