--- a/slime_seed_finder_webnode/Cargo.toml
+++ b/slime_seed_finder_webnode/Cargo.toml
@@ -14,7 +14,7 @@ slime_seed_finder = { "path" = ".." }
 image = { version = "0.24.1", default-features = false }
 log = { version = "0.4.14", features = ["std"] }
 minecraft_screenshot_parser = "0.4"
-palette = "0.6.0"
+colorgrad = "0.6.2"
 serde = { version = "1.0.126", features = ["derive"] }
 serde_json = "1.0.64"
 zip = { version = "0.6.2", default-features = false }
