Fix download map button for biomes.html canvas
Use Rust code to create big PNGs, its slow though

--- a/slime_seed_finder_web/Cargo.toml
+++ b/slime_seed_finder_web/Cargo.toml
@@ -22,4 +22,6 @@ serde-wasm-bindgen = "0.6"
 wasm-bindgen = { version = "0.2.87", features = ["serde-serialize"] }
 wasm-bindgen-file-reader = "1"
 web-sys = { version = "0.3.64", features = ["Blob", "File", "FileReaderSync"] }
+js-sys = { version = "0.3.64", features = [] }
 zip = { version = "0.6.2", default-features = false }
+base64 = "0.21.4"
